Table on mobile fixes

--- a/styles/components/table.css
+++ b/styles/components/table.css
@@ -176,27 +176,26 @@ td:nth-child(4) {
 /* Professor's Table */
 #professorTable th:nth-child(1),
 #professorTable td:nth-child(1) {
-  width: 25%;
+  width: 40%;
+  /* Professor name */
 }
 
 #professorTable th:nth-child(2),
 #professorTable td:nth-child(2) {
-  width: 30%;
+  width: 20%;
+  /* Courses */
 }
 
 #professorTable th:nth-child(3),
 #professorTable td:nth-child(3) {
-  width: 15%;
+  width: 20%;
+  /* Students */
 }
 
 #professorTable th:nth-child(4),
 #professorTable td:nth-child(4) {
-  width: 15%;
-}
-
-#professorTable th:nth-child(5),
-#professorTable td:nth-child(5) {
-  width: 15%;
+  width: 20%;
+  /* Averages */
   text-align: center;
 }
 
@@ -324,6 +323,27 @@ td:nth-child(4) {
     overflow-wrap: break-word;
     word-wrap: break-word;
     word-break: normal;
+  }
+
+  #professorTable th:nth-child(1),
+  #professorTable td:nth-child(1) {
+    width: 35%;
+  }
+
+  #professorTable th:nth-child(2),
+  #professorTable td:nth-child(2) {
+    width: 25%;
+  }
+
+  #professorTable th:nth-child(3),
+  #professorTable td:nth-child(3) {
+    width: 20%;
+  }
+
+  #professorTable th:nth-child(4),
+  #professorTable td:nth-child(4) {
+    width: 20%;
+    text-align: center;
   }
 }
 
